--- a/SpectatorFootball/MainWindow.xaml
+++ b/SpectatorFootball/MainWindow.xaml
@@ -22,7 +22,7 @@
             </MenuItem>
             <MenuItem Name="MenuLeague" Header="League">
                 <MenuItem Name="MenuStandings" Header="Standings" Click= "Show_LeagueStandings" />
-                <MenuItem Name="MenuSchedule" Header="Schedule" />
+                <MenuItem Name="MenuSchedule" Header="Schedule" Click= "Show_LeagueSchedule" />
                 <MenuItem Name="MenuDraft" Header="Draft" Click= "Show_LeagueDraft" />
                 <MenuItem Name="MenuFreeAgency" Header="Free Agency" Click= "Show_FreeAgency" />
                 <MenuItem Name="MenuTrainingCamp" Header="Training Camp" Click= "Show_TrainingCamp" />
