--- a/SpectatorFootball/App.xaml
+++ b/SpectatorFootball/App.xaml
@@ -279,6 +279,14 @@
             <Setter Property="Foreground" Value="white"/>
         </Style>
 
+        <!-- Schedule Team name Label -->
+        <Style TargetType="Label" x:Key="SchedTeanlbltyle">
+            <Setter Property="FontFamily" Value="Verdana"/>
+            <Setter Property="FontSize" Value="12"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="Foreground" Value="Black"/>
+        </Style>
+
         <!-- Combo boxes -->
         <Style TargetType="ComboBox" x:Key="ComboBoxstyle">
             <Setter Property="FontFamily" Value="Verdana"/>
