--- a/SpectatorFootball/App.xaml
+++ b/SpectatorFootball/App.xaml
@@ -84,7 +84,13 @@
             <Setter Property="FontWeight" Value="Normal"/>
             <Setter Property="Foreground" Value="DarkBlue"/>
         </Style>
-        
+
+        <Style TargetType="Label" x:Key="boxscoreTeamLabel">
+            <Setter Property="FontFamily" Value="Verdana"/>
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="FontWeight" Value="Normal"/>
+        </Style>
+
         <!-- Popup fonts label -->
         <Style TargetType="Label" x:Key="PopupLabel">
             <Setter Property="FontFamily" Value="Verdana"/>
@@ -287,6 +293,14 @@
             <Setter Property="Foreground" Value="Black"/>
         </Style>
 
+        <!-- Schedule Clickable Label -->
+        <Style TargetType="Label" x:Key="SchedClickablelbltyle">
+            <Setter Property="FontFamily" Value="Verdana"/>
+            <Setter Property="FontSize" Value="12"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="Foreground" Value="Blue"/>
+        </Style>
+
         <!-- Combo boxes -->
         <Style TargetType="ComboBox" x:Key="ComboBoxstyle">
             <Setter Property="FontFamily" Value="Verdana"/>
@@ -335,8 +349,6 @@
             <Setter Property="Background" Value="White"/>
             <Setter Property="BorderBrush" Value="Black"/>
         </Style>
-
-
 
         <!-- Sliders -->
         <Style TargetType="Slider" x:Key="GeneralSlider">
