--- a/SpectatorFootball/App.xaml
+++ b/SpectatorFootball/App.xaml
@@ -155,6 +155,16 @@
             <Setter Property="FontWeight" Value="Normal"/>
             <Setter Property="Foreground" Value="white"/>
         </Style>
+        <!-- Team Detail Banner -->
+        <Style TargetType="Label" x:Key="TeamDetBannerstyle">
+            <Setter Property="FontFamily" Value="Verdana"/>
+            <Setter Property="FontSize" Value="24"/>
+            <Setter Property="Height" Value="40"/>
+            <Setter Property="Width" Value="500"/>
+            <Setter Property="HorizontalAlignment" Value="center"/>
+            <Setter Property="VerticalContentAlignment" Value="Bottom"/>
+            <Setter Property="FontWeight" Value="Normal"/>
+        </Style>
         <!-- Medium sized screen title label -->
         <Style TargetType="Label" x:Key="MedLabelstyle">
             <Setter Property="FontFamily" Value="Verdana"/>
