--- a/SpectatorFootball/WindowsLeague/Team_DetailUX.xaml
+++ b/SpectatorFootball/WindowsLeague/Team_DetailUX.xaml
@@ -5,6 +5,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local1="clr-namespace:SpectatorFootball.BindingConverters"
+             Loaded="Team_detail_Loaded"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
@@ -13,15 +14,18 @@
         <local1:ImageConverter x:Key="ImageConverter" />
         <local1:StadiumImageConverter x:Key="StadiumImageConverter" />
         <local1:TextConverter x:Key="TextConverter" />
+        <Style x:Key="myHeaderStyle" TargetType="{x:Type GridViewColumnHeader}">
+            <Setter Property="Visibility" Value="Collapsed" />
+        </Style>
     </UserControl.Resources>
     <DockPanel Height="730">
         <Grid DockPanel.Dock="Top">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="2*" />
-                <ColumnDefinition Width="2*" />
-                <ColumnDefinition Width="2*" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="4*" />
+                <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
-            <Label Grid.Column="1" Name="lblTitle" Style="{DynamicResource MedLabelstyle}" />
+            <Label Grid.Column="1" Name="lblBanner" Style="{DynamicResource TeamDetBannerstyle}" />
             <Button Grid.Column="2" Name="help_btn" Focusable="false" Style="{StaticResource appHelpBTN}" Click="help_btn_Click">Help ?</Button>
         </Grid>
         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom">
@@ -302,6 +306,65 @@
                             </StackPanel>
 
                         </StackPanel>
+                    </StackPanel>
+                </TabItem>
+                <TabItem Header="Schedule">
+                    <StackPanel Orientation="Vertical">
+                        <ListView Name="lstGames" Style="{StaticResource SchedWeekLVStyle}" MouseDoubleClick="lstGames_Click" Height="530" Width="1000">
+                            <ListView.View>
+                                <GridView AllowsColumnReorder="false" ColumnHeaderContainerStyle="{StaticResource myHeaderStyle}">
+                                    <GridViewColumn Header="">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <Label Width="100" Content="{Binding Status}" Style="{StaticResource SchedTeanlbltyle}"></Label>
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                    <GridViewColumn Header="">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <Label Width="300" HorizontalContentAlignment="Right" Content="{Binding Away_Team_Name}" Style="{StaticResource SchedTeanlbltyle}"></Label>
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                    <GridViewColumn Header="">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <Image Name="HelmetImgAWY" Source="{Binding Path=Away_HelmetImage}"  Width="20" Height="20" />
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                    <GridViewColumn Header="">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <Label Width="20" Content="@" Style="{StaticResource SchedTeanlbltyle}"></Label>
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                    <GridViewColumn Header="">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <Image Name="HelmetImgHME" Source="{Binding Path=Home_HelmetImage}"  Width="20" Height="20" />
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                    <GridViewColumn Header="">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <Label Width="300" Content="{Binding Home_Team_Name}" Style="{StaticResource SchedTeanlbltyle}"></Label>
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                    <GridViewColumn Header="">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <Label Width="120" Content="{Binding Action}" Style="{StaticResource SchedClickablelbltyle}"></Label>
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                </GridView>
+                            </ListView.View>
+                        </ListView>
                     </StackPanel>
                 </TabItem>
 
